--- a/index.html
+++ b/index.html
@@ -106,6 +106,17 @@
 </tbody>
 </table>
 </div>
+
+<div>
+ <table>
+ <thead>
+  <tr>
+   <th> </th>
+   <th></th>
+   <th></th>
+  </tr>
+ </thead>
+  
 <div class="kirby">
 <br><br><br><br><br><br><br><br><br>
 <p class=kirbye><em>Kirbo will get you if your assignments are late...</em></p>
