--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 	<th class="index" scope="col">Number of Assignments</th>
 	<th class="index" scope="col">Missing/Late</th>
       </tr>
-        </thead>
+    </thead>
 <tbody>
   <tr>
     <td class="sprdsht"> Spread Sheets </td>
@@ -107,16 +107,43 @@
 </table>
 </div>
 
-<div>
- <table>
+<!-- ------------------------ -->
+<br><br><br>
+<div class="table2">
+ <table class="table1">
  <thead>
-  <tr>
-   <th> </th>
-   <th></th>
-   <th></th>
+  <tr class="tr1">
+   <th class="th1" scope="col">Date</th>
+   <th class="th1" scope="col">Link</th>
+   <th class="th1" scope="col">Description</th>
   </tr>
  </thead>
-  
+
+<tbody class="objective"> 
+  <tr>
+   <td class="td1">1</td>
+   <td class="td1">2</td>
+   <td class="td1">3</td>
+  </tr>
+
+  <tr>
+   <td class="td1"></td>
+   <td class="td1"></td>
+   <td class="td1"></td>
+  </tr>
+
+  <tr>
+   <td class="td1"></td>
+   <td class="td1"></td>
+   <td class="td1"></td>
+  </tr>
+</tbody>
+</table>
+</div>
+
+
+<br><br><br>
+
 <div class="kirby">
 <br><br><br><br><br><br><br><br><br>
 <p class=kirbye><em>Kirbo will get you if your assignments are late...</em></p>
