--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+\<!DOCTYPE html> 
 <html>
 <head> 
   <title>CS</title>
@@ -44,6 +44,7 @@
   <a href="me.html">About me</a><br>
   <a href="pg.html">page</a><br>
   <a href="fan.html">Im a Fan of</a> --- <a href="style.css">"CSS" for "Im a Fan of"</a>
+
 </div>
 
 <!-- ----------------------------------------- --> 
@@ -139,6 +140,26 @@
    <td class="td1" name="link"><a href="menu">Menu</a></td>
    <td class="td1" name="description">Random Menu</td>
   </tr>
+  <tr>
+    <td class="td1" name="date">10/3/24</td>
+    <td class="td1" name="link"><a href="rangers/index.html">rangers</a></td>
+    <td class="td1" name="description">Index for rangers project</td>
+  </tr>
+  <tr>
+    <td class="td1" name="date">10/3/24</td>
+    <td class="td1" name="link"><a href="css_project/css.html">CSS.HTML</a></td>
+    <td class="td1" name="description">Css project</td>
+  </tr>
+  <tr>
+    <td class="td1" name="date">10/7/24</td>
+    <td class="td1" name="link"><a href="javascript/madlib.html">Madlib.HTML</a> </td>
+    <td class="td1" name="description">Java script Practice document</td>
+  </tr>
+  <tr>
+    <td class="td1" name="date">10/11/24</td>
+    <td class="td1" name="link"><a href="tictactoe/ttt.html">TicTacToe</td>
+    <td class="td1" name="description">Mostly function game of TicTacToe run with JS</td>
+  </tr> 
 </tbody>
 </table>
 </div>
